Fixed word wrap issue as per the ticket suggestion.

--- a/src/wp-content/themes/twentyseventeen/assets/css/blocks.css
+++ b/src/wp-content/themes/twentyseventeen/assets/css/blocks.css
@@ -214,7 +214,7 @@ p.has-drop-cap:not(:focus)::first-letter {
 	padding: 0.7em 2em;
 	-webkit-transition: background-color 0.2s ease-in-out;
 	transition: background-color 0.2s ease-in-out;
-	white-space: pre-wrap;
+	white-space: pre-line;
 }
 
 .entry-content .wp-block-button__link {
